kubernetes/6-deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend-container
          image: flaskapp:1.0
          ports:
            - containerPort: 5000
          resources: {}

        - name: nginx
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
            - mountPath: /app/public
              name: public-dir
          resources: {}
      volumes:
        - name: nginx-config
          configMap:
            name: webserver-cfg
        - name: public-dir
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: backend-deployment
  ports:
    - port: 80
      targetPort: 80
