kubernetes/8-deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: frontend-deployment
  name: frontend-deployment
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
      - name: frontend-container
        image: vueapp:1.0
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: frontend-deployment
  ports:
    - port: 8080
      targetPort: 8080
